# molecular-property-prediction-v1

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  visualize_results.py
app/: app.py
app/templates/: index.html
config/: active_learning.yaml  default.yaml  deployment.yaml  gat_config.yaml  gcn_config.yaml  gin_config.yaml
configs/: README.md  default.yaml  ensemble.yaml  fast_train.yaml  gat_bbbp.yaml  gcn_bbbp.yaml  gcn_esol.yaml  gin_freesolv.yaml  gin_highperf.yaml  gin_hiv.yaml
results/bbbp_gat_compare/: bbbp_gat_compare_predictions.npz
results/bbbp_gcn_scaffold/: bbbp_gcn_scaffold_predictions.npz
results/bbbp_gin_compare/: bbbp_gin_compare_predictions.npz
scripts/: .gitignore  Dockerfile  docker-compose.yml  download_data.sh  evaluate.py  hyperparameter_search.py  preprocess_data.py  train.py
src/: __init__.py
src/data/: __init__.py  augmentation.py  featurizers.py  graph_builder.py  loaders.py  molecular_descriptors.py  splitters.py
src/models/: __init__.py  base_model.py  baselines.py  ensemble.py  gat.py  gcn.py  gin.py
src/models/layers/: __init__.py  pooling.py
src/training/: __init__.py  callbacks.py  losses.py  metrics.py  optimization.py  trainer.py
src/utils/: __init__.py  checkpoint.py  config.py  logger.py  seed.py  visualization.py
